fixing projects section on mobile

--- a/src/components/Projects2/Projects.css
+++ b/src/components/Projects2/Projects.css
@@ -58,11 +58,20 @@
 .projects {
   display: flex;
   justify-content: center;
-  padding: 2rem 2rem;
+  padding: 4rem 2rem;
   gap: 4rem;
 }
 
+.sitetitle{
 
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+
+}
+.sitePic{
+  height: 200px;
+}
 
 @media screen and (max-width: 906px) {
   .projects {
@@ -83,7 +92,7 @@
 @media screen and (max-width : 3000px){
   .projects-mobile{
   visibility:hidden;
-  max-height: 1em;
+  height: 1em;
   }
 }
 @media screen and (max-width : 906px){
@@ -92,5 +101,10 @@
   }
  .projects-mobile{
   visibility:visible;
+  padding-bottom: 3rem;
+  }
+  .sitePic{
+
+    height: 200px;
   }
 }
